app/main/default/objects/LocalFlosum__Metadata_Item__c/fields/LocalFlosum__Attachment_ID__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Attachment_ID__c</fullName>
        <label>Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>