app/main/default/objects/LocalFlosum__Metadata_Item__c/fields/LocalFlosum__Component_Type__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Component_Type__c</fullName>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ActionLinkGroupTemplate</fullName>
                </value>
                <value>
                    <fullName>AnalyticSnapshot</fullName>
                </value>
                <value>
                    <fullName>ApexClass</fullName>
                </value>
                <value>
                    <fullName>ApexComponent</fullName>
                </value>
                <value>
                    <fullName>ApexPage</fullName>
                </value>
                <value>
                    <fullName>ApexTestSuite</fullName>
                </value>
                <value>
                    <fullName>ApexTrigger</fullName>
                </value>
                <value>
                    <fullName>AppMenu</fullName>
                </value>
                <value>
                    <fullName>ApprovalProcess</fullName>
                </value>
                <value>
                    <fullName>AssignmentRule</fullName>
                </value>
                <value>
                    <fullName>AssignmentRules</fullName>
                </value>
                <value>
                    <fullName>AuraDefinitionBundle</fullName>
                </value>
                <value>
                    <fullName>AuthProvider</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRule</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRules</fullName>
                </value>
                <value>
                    <fullName>BaseSharingRule</fullName>
                </value>
                <value>
                    <fullName>Bot</fullName>
                </value>
                <value>
                    <fullName>BrandingSet</fullName>
                </value>
                <value>
                    <fullName>BusinessProcess</fullName>
                </value>
                <value>
                    <fullName>CallCenter</fullName>
                </value>
                <value>
                    <fullName>CampaignInfluenceModel</fullName>
                </value>
                <value>
                    <fullName>Certificate</fullName>
                </value>
                <value>
                    <fullName>ChannelLayout</fullName>
                </value>
                <value>
                    <fullName>CleanDataService</fullName>
                </value>
                <value>
                    <fullName>CMSConnectSource</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>CommunityTemplateDefinition</fullName>
                </value>
                <value>
                    <fullName>CommunityThemeDefinition</fullName>
                </value>
                <value>
                    <fullName>CompactLayout</fullName>
                </value>
                <value>
                    <fullName>ConnectedApp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>