app/main/default/objects/LocalFlosum__Metadata_Item__c/fields/LocalFlosum__CRC32__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__CRC32__c</fullName>
        <label>CRC32</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>