app/main/default/objects/LocalFlosum__Metadata_Item__c/fields/LocalFlosum__Folder__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Folder__c</fullName>
        <label>Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>