app/main/default/objects/LocalFlosum__Metadata_Item__c/fields/LocalFlosum__Is_Retrieved__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Is_Retrieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Retrieved</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>