app/main/default/objects/LocalFlosum__Metadata_Item__c/fields/LocalFlosum__Label__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>