app/main/default/objects/LocalFlosum__Metadata_Item__c/fields/LocalFlosum__Last_Modified_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Last_Modified_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Changed On</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
</CustomObject>