app/main/default/objects/LocalFlosum__Metadata_Item__c/fields/LocalFlosum__Last_Updated_By__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Last_Updated_By__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>