app/main/default/objects/LocalFlosum__Metadata_Item__c/fields/LocalFlosum__Name__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>