app/main/default/objects/LocalFlosum__Metadata_Item__c/fields/LocalFlosum__Request_Created__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Request_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Created</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>