app/main/default/objects/LocalFlosum__Metadata_Item__c/fields/LocalFlosum__Snapshot__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Snapshot__c</fullName>
        <label>Snapshot</label>
        <referenceTo>LocalFlosum__Snapshot__c</referenceTo>
        <relationshipLabel>Metadata Items</relationshipLabel>
        <relationshipName>Metadata_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>